distributed-chat/00-distributed-chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributed-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distributed-chat
  template:
    metadata:
      labels:
        app: distributed-chat
    spec:
      containers:
        - name: distributed-chat
          image: registry.lab.k8s.local/distributed-chat:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
            - containerPort: 8081
            # - containerPort: 8082
          resources:
            limits:
              cpu: "500m"
              memory: "1Gi"
            requests:
              cpu: "100m"
