distributed-chat/01-distributed-chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: distributed-chat
  name: distributed-chat
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: distributed-chat

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: distributed-chat
  name: distributed-chat-headless
spec:
  clusterIP: None
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: distributed-chat
